--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "url": "git+https://github.com/LambdaSchool/web-sprint-challenge-build-a-web-api"
     },
     "dependencies": {
-        "express": "4.17.1",
-        "helmet": "4.6.0",
-        "knex": "0.95.11",
-        "sqlite3": "5.0.2"
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "helmet": "^4.6.0",
+        "knex": "^0.95.11",
+        "nodemon": "^2.0.14",
+        "sqlite3": "^5.0.2"
     },
     "devDependencies": {
         "cross-env": "7.0.3",
